<?xml version="1.0" encoding="utf-8"?>
<layout >
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dim_space_team"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minHeight="50dp">

                <TextView
                    android:id="@+id/textIntro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/choose_your_code_name_for_this_mission"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minHeight="50dp">

                <EditText
                    android:id="@+id/codeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:ems="10"
                    android:hint="@string/code_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#00897B"
                    android:textColorHint="#00BAA7" />

                <Button
                    android:id="@+id/joinButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    app:layout_constraintBaseline_toBaselineOf="@+id/codeName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="75dp"
                android:gravity="center_vertical|end"
                android:minHeight="50dp">

                <TextView
                    android:id="@+id/textIntro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/if_your_a_new_crewmate"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical|end"
                android:minHeight="50dp">

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_as_a_new_agent" />
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="245dp"
            android:layout_height="239dp"
            android:layout_marginEnd="400dp"
            android:contentDescription="@string/image_of_blue_crewmate_from_among_us"
            android:rotation="-30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_goneMarginStart="-30dp"
            app:srcCompat="@drawable/cyan_among_us_character" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="199dp"
            android:layout_height="257dp"
            android:contentDescription="@string/image_of_red_crewmate_from_among_us"
            android:rotation="30"
            android:scaleX="-1"
            android:transformPivotX="30dp"
            android:translationX="200dp"
            android:translationY="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/red_among_us_png" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>